test: added ProductTypeTest. Fixed code in ProductType. Regretion testing success